# Raportare-comisia-9

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  LICENSE-CC-BY-4.0.md  NOTICE.md  PRIVACY.md  README.md  Raportare_OMEC_3019_2025.ipynb  SECURITY.md  environment.yml  pyproject.toml  requirements.txt  start_notebook.bat  start_notebook.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: tests.yml
data/cache/: README.md
data/input/: README.md
data/output/: README.md
docs/: EXPORT_WEB_OF_SCIENCE.md  GHID_UTILIZARE.md  PUBLICARE_GITHUB.md  SURSE_SI_LIMITARI.md
scripts/: __init__.py  classifica_articole.py  completeaza_criterii_cnatdcu.py  construieste_articole_citari_wos.py  google_scholar_export.py  pipeline.py
tests/: test_classification.py  test_notebook.py  test_pipeline.py
tools/: build_notebook.py  check_notebook.py  package_project.py
