[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "raportare-omec-3019-2025"
version = "0.1.0"
description = "Flux Jupyter pentru raportarea articolelor și citațiilor, Comisia 9."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT OR CC-BY-4.0"}
dependencies = [
  "openpyxl>=3.1,<4",
  "pandas>=2.1,<3",
  "requests>=2.31,<3",
  "scholarly==1.7.11",
  "xlrd>=2.0.1,<3",
  "python-dotenv>=1.0,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

